# Learn_MLFlow

./: .gitignore  Makefile  pyproject.toml
mlartifacts/335857954742256624/traces/3422ea4e70a6493bb03c979ed83f5dca/artifacts/: traces.json
mlartifacts/335857954742256624/traces/57e30c08337a45e0b53c016c34ec8142/artifacts/: traces.json
mlartifacts/335857954742256624/traces/70742def649a481392a42a41df5b0069/artifacts/: traces.json
mlartifacts/335857954742256624/traces/7b1663d5beee4022adda16ea6050af6d/artifacts/: traces.json
mlartifacts/335857954742256624/traces/831d7bd77d2b4a8eaec6e5d62e3c05df/artifacts/: traces.json
mlartifacts/335857954742256624/traces/9fc0b2697a8d4f5faf6660118a99df8e/artifacts/: traces.json
mlruns/0/: meta.yaml
mlruns/335857954742256624/: meta.yaml
mlruns/335857954742256624/traces/3422ea4e70a6493bb03c979ed83f5dca/: trace_info.yaml
mlruns/335857954742256624/traces/57e30c08337a45e0b53c016c34ec8142/: trace_info.yaml
mlruns/335857954742256624/traces/70742def649a481392a42a41df5b0069/: trace_info.yaml
mlruns/335857954742256624/traces/7b1663d5beee4022adda16ea6050af6d/: trace_info.yaml
mlruns/335857954742256624/traces/831d7bd77d2b4a8eaec6e5d62e3c05df/: trace_info.yaml
mlruns/335857954742256624/traces/9fc0b2697a8d4f5faf6660118a99df8e/: trace_info.yaml
mlruns/335857954742256624/traces/a078f503c3a344709def108b64260960/: trace_info.yaml
mlruns/335857954742256624/traces/e0bf94b001aa48cbb05c1a5d5453a71e/: trace_info.yaml
mlruns/335857954742256624/traces/edf8a9612bd0471a853aefb4c9f3b471/: trace_info.yaml
research/: notebook.ipynb
(+22 files in other folders)
